<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/activity_webview"
    android:background="@drawable/background_main">

    <Button
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/activity_webview_take_flag"
        android:id="@+id/buttonQR"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="qrButton"
        android:background="@drawable/background_button_blue_with_dark_blue_border"
        android:drawableEnd="@drawable/ic_camera"
        android:layout_marginTop="1dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/activity_webview_fraction_1"
        android:id="@+id/fraction1_score"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/fraction1_name"
        android:layout_alignParentTop="true"
        android:background="#ff0000"
        android:layout_toStartOf="@+id/space"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:gravity="center_vertical|center_horizontal" />

    <Space
        android:layout_width="10dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/space" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/activity_webview_fraction_2"
        android:id="@+id/fraction2_score"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/fraction2_name"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/space"
        android:background="#0000ff"
        android:gravity="center_vertical|center_horizontal"
        android:textStyle="bold"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/player_score"
        android:layout_below="@+id/fraction1_score"
        android:layout_toEndOf="@+id/textView5" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSettings"
        android:layout_below="@+id/fraction2_score"
        android:layout_alignParentEnd="true"
        android:onClick="settingsButton"
        android:background="@drawable/ic_settings"
        android:contentDescription="@string/settings" />


    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/webViewMap"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/buttonQR"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tableRow" />
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/player_score"
        android:id="@+id/tableRow"
        android:weightSum="4"
        android:layout_marginTop="2dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_webview_first_floor"
            android:textSize="10sp"
            android:id="@+id/buttonLayer1"
            android:onClick="layer1Button"
            android:layout_weight="1"
            android:background="@drawable/background_button_blue_with_dark_blue_border"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_webview_second_floor"
            android:textSize="10sp"
            android:id="@+id/buttonLayer2"
            android:onClick="layer2Button"
            android:layout_weight="1"
            android:background="@drawable/background_button_blue_with_dark_blue_border"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_webview_third_floor"
            android:textSize="10sp"
            android:id="@+id/buttonLayer3"
            android:onClick="layer3Button"
            android:layout_weight="1"
            android:background="@drawable/background_button_blue_with_dark_blue_border"
            android:layout_gravity="center_vertical"
            android:layout_margin="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_webview_fourth_floor"
            android:textSize="10sp"
            android:id="@+id/buttonLayer4"
            android:onClick="layer4Button"
            android:layout_weight="1"
            android:background="@drawable/background_button_blue_with_dark_blue_border"
            android:layout_margin="2dp"
            android:layout_gravity="center_vertical" />
    </TableRow>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/activity_webview_taken_flags"
        android:id="@+id/textView5"
        android:layout_below="@+id/fraction1_score"
        android:layout_alignParentStart="true" />



</RelativeLayout>
